# Stock-Analytics

./: .gitignore  0-home.py  Makefile  README.md  dataset.dvc  flow_1-deployment.yaml  prefect-deployment-docker.yaml  pyproject.toml
.dvc/: config
configs/: settings.yaml  ticker_lists.yaml
experiment_notebooks/: 0-ingest_data.ipynb  SignalStrategyV1.html  SmaCross.html  TestStratrgyV1.html  experiment_flow.ipynb  my_first_pipeline.pkl  sktime.ipynb  test_backtesting.ipynb  try_preprocess_pycaret.ipynb
notebooks/: 0-ingest_data.ipynb
pages/: 1-features_1.py
prefect/: memo_store.toml  prefect.db
services/streamlit/: Dockerfile
src/: config.py
src/configs/: settings.yaml
src/stock_analytics/: __init__.py  config.py  ingestion.py  prefect_flow.py
src/stock_analytics/prefect_flows/: request_ticker_price_and_save.py  test_flow_1.py  test_flow_2.py
src/stock_analytics/utils/: __init__.py
